--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,16 @@
 version: '3'
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: dev
     ports:
       - "8080:8080"
-    environment:
-      - DB_URL=postgres://postgres:password@db:5432/cms?sslmode=disable
-      - JWT_SECRET=your-secret-key
     depends_on:
       - db
     volumes:
       - .:/app
-    command: air -c .air.toml
 
   db:
     image: postgres:15
@@ -23,6 +22,7 @@ services:
       - POSTGRES_DB=cms
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      - ./migrations:/docker-entrypoint-initdb.d
 
 volumes:
   postgres-data:
