--- a/.air.toml
+++ b/.air.toml
@@ -14,7 +14,7 @@ tmp_dir = "tmp"
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   kill_delay = "0s"
-  log = "build-myerror.log"
+  log = "build-valueobject.log"
   send_interrupt = false
   stop_on_error = true
 
