--- a/src/.env.development
+++ b/src/.env.development
@@ -1,3 +1,6 @@
-PORT=:8080
-DB_URL=postgres://postgres:password@db:5432/cms?sslmode=disable
+PORT=8080
+DB_HOST=db
+DB_NAME=cms
+DB_USER=postgres
+DB_PASSWORD=password
 JWT_SECRET=your-secret-key
