--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - POSTGRES_DB=cms
     volumes:
       - postgres-data:/var/lib/postgresql/data
-      - ./src/migrations:/docker-entrypoint-initdb.d
+      - ./migrations:/docker-entrypoint-initdb.d
 
 volumes:
   postgres-data:
