--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -105,6 +105,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: need-deploy
     if: needs.need-deploy.outputs.should-deploy == 'true' && github.event_name == 'push'
 
     permissions:
