fix: 画像アップロードapiの軽微な修正

--- a/src/.env.development
+++ b/src/.env.development
@@ -5,3 +5,4 @@ DB_NAME=cms
 DB_USER=postgres
 DB_PASSWORD=password
 JWT_SECRET_KEY=your-secret-key
+GCS_IMAGE_BUCKET_NAME=terraform-cloudrun-api-cms-bucket
