--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3'
 services:
   app:
     build:
-      context: .
-      dockerfile: ./src/Dockerfile
+      context: ./src
+      dockerfile: Dockerfile
       target: dev
     ports:
       - "8080:8080"
