feat: auth0対応追加

--- a/src/.env.development
+++ b/src/.env.development
@@ -6,3 +6,5 @@ DB_USER=postgres
 DB_PASSWORD=password
 JWT_SECRET_KEY=your-secret-key
 GCS_IMAGE_BUCKET_NAME=terraform-cloudrun-api-cms-bucket
+AUTH0_DOMAIN=dev-z3wum6aumchrh0uh.us.auth0.com
+AUDIENCE=http://localhost:8080
